<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_user_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/normal_margin_padding"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_avatar"
        android:layout_width="@dimen/card_review_size"
        android:layout_height="@dimen/card_review_size"
        app:cardCornerRadius="@dimen/card_review_radius">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_author_name"
        android:layout_toEndOf="@id/cv_avatar"
        android:layout_marginStart="@dimen/normal_margin_padding"
        android:layout_marginBottom="@dimen/extra_small_margin_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/name_placeholder"/>

    <TextView
        android:id="@+id/tv_star_score"
        android:layout_toEndOf="@id/cv_avatar"
        android:layout_below="@+id/tv_author_name"
        android:layout_marginStart="@dimen/normal_margin_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/score_placeholder"/>

    <ImageView
        android:layout_width="@dimen/star_size"
        android:layout_height="@dimen/star_size"
        android:layout_toEndOf="@id/tv_star_score"
        android:layout_below="@+id/tv_author_name"
        android:layout_marginStart="@dimen/extra_small_margin_padding"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/tv_review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/normal_margin_padding"
        android:layout_below="@+id/cv_avatar"
        android:text="@string/overview_placeholder"/>
</RelativeLayout>